# oism

./: .gitignore  CMakeLists.txt  README.mkd  inputconf  inputmap
src/: OISMHandler.cpp  OISMHandler.h  OISMHandlerUgly.cpp  OISMLog.cpp  OISMLog.h  OISMSimpleSerializer.cpp  OISMSimpleSerializer.h  OISMfwdcl.h
src/mm/: hash_fun.hpp
src/test/: Test.cpp  TestSpeed.cpp  TestUtils.cpp  TestUtils.h  main.cpp
